--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,6 @@
     %svelte.head%
   </head>
   <body>
-    <div id="svelte">%svelte.body%</div>
+    <div id="svelte" class="flex flex-col h-full justify-between">%svelte.body%</div>
   </body>
 </html>
