--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
     <link rel="icon" href="/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
+    />
     %svelte.head%
   </head>
   <body>
