--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Ordsnille</title>
     <meta charset="utf-8" />
-    <meta name="description" content="" />
+    <meta name="description" content="Spela Wordle på Svenska – Ett mastermind-spel med ord" />
     <link rel="icon" href="/favicon.png" />
     <meta
       name="viewport"
