--- a/src/app.html
+++ b/src/app.html
@@ -12,9 +12,17 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
     />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
+
     %svelte.head%
   </head>
   <body>
-    <div id="svelte" class="flex flex-col h-full justify-between">%svelte.body%</div>
+    <div id="svelte" class="flex flex-col h-full justify-between bg-neutral-100">%svelte.body%</div>
   </body>
 </html>
