ios color settings

--- a/src/app.html
+++ b/src/app.html
@@ -8,6 +8,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#E2FBE8" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
@@ -22,7 +24,7 @@
 
     %svelte.head%
   </head>
-  <body>
+  <body class="bg-green-300">
     <div id="svelte" class="flex flex-col h-full justify-between bg-neutral-100">%svelte.body%</div>
   </body>
 </html>
