--- a/src/app.html
+++ b/src/app.html
@@ -26,5 +26,10 @@
   </head>
   <body class="bg-green-100">
     <div id="svelte" class="flex flex-col h-full justify-between bg-neutral-100">%svelte.body%</div>
+    <script
+      defer
+      data-domain="ordsnille.brusman.se"
+      src="https://plausible.io/js/plausible.js"
+    ></script>
   </body>
 </html>
