--- a/src/app.html
+++ b/src/app.html
@@ -31,5 +31,13 @@
       data-domain="ordsnille.brusman.se"
       src="https://plausible.io/js/plausible.js"
     ></script>
+    <script>
+      window.plausible =
+        window.plausible ||
+        function () {
+          (window.plausible.q = window.plausible.q || []).push(arguments);
+        };
+    </script>
+    Copy
   </body>
 </html>
