--- a/src/app.html
+++ b/src/app.html
@@ -10,6 +10,12 @@
     <link rel="manifest" href="/site.webmanifest" />
     <meta name="theme-color" content="#E2FBE8" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta property="og:title" content="Ordsnille – ett dagligt ordspel" />
+    <meta property="og:site_name" content="Ordsnille" />
+    <meta property="og:url" content="https://ordsnille.brusman.se" />
+    <meta property="og:description" content="Du har 6 försök på dig att gissa dagens ord" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://ordsnille.brusman.se/sharing-1200-630.png" />
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
