--- a/src/app.html
+++ b/src/app.html
@@ -16,6 +16,9 @@
     <meta property="og:description" content="Du har 6 försök på dig att gissa dagens ord" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://ordsnille.brusman.se/sharing-1200-630.png" />
+    <meta name="twitter:card" content="summary_large_image"></meta>
+    <meta name="twitter:creator" content="@himynameisjonas" />
+
     <meta
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
