--- a/src/app.html
+++ b/src/app.html
@@ -33,7 +33,7 @@
 
     %svelte.head%
   </head>
-  <body class="bg-green-100">
+  <body class="bg-green-100 flex flex-col justify-items-stretch h-full">
     <div id="svelte" class="flex flex-col h-full justify-between bg-neutral-100">%svelte.body%</div>
     <script
       defer
