--- a/src/app.html
+++ b/src/app.html
@@ -21,7 +21,7 @@
 
     <meta
       name="viewport"
-      content="width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
+      content="viewport-fit=cover width=device-width, user-scalable=no, initial-scale=1, maximum-scale=1.0"
     />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
