--- a/src/app.html
+++ b/src/app.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="Du har 6 försök på dig att gissa dagens ord" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://ordsnille.brusman.se/sharing-1200-630.png" />
-    <meta name="twitter:card" content="summary_large_image"></meta>
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:creator" content="@himynameisjonas" />
 
     <meta
