ignore stats visits

--- a/src/app.html
+++ b/src/app.html
@@ -33,7 +33,7 @@
     <script
       defer
       data-domain="ordsnille.brusman.se"
-      data-exclude="/instruktioner, /stats"
+      data-exclude="/instruktioner, /statistik"
       src="https://plausible.io/js/plausible.exclusions.js"
     ></script>
 
