--- a/src/app.html
+++ b/src/app.html
@@ -36,6 +36,11 @@
       data-exclude="/instruktioner, /statistik"
       src="https://plausible.io/js/plausible.exclusions.js"
     ></script>
+    <script
+      data-goatcounter="https://ordsnille.goatcounter.com/count"
+      async
+      src="//gc.zgo.at/count.js"
+    ></script>
 
     %svelte.head%
   </head>
