--- a/src/app.html
+++ b/src/app.html
@@ -39,7 +39,7 @@
     <script
       data-goatcounter="https://ordsnille.goatcounter.com/count"
       async
-      src="//gc.zgo.at/count.js"
+      src="/count.js"
     ></script>
 
     %svelte.head%
