--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Ordsnille</title>
+    <title>Ordsnille - Wordle på svenska</title>
     <meta charset="utf-8" />
     <meta name="description" content="Spela Wordle på Svenska – Ett mastermind-spel med ord" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
