--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="sv">
   <head>
     <title>Ordsnille - Wordle på svenska</title>
     <meta charset="utf-8" />
